--- a/index.html
+++ b/index.html
@@ -1,14 +1,21 @@
 <!DOCTYPE html>
 <html lang="ar">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title></title>
+  <meta charset="UTF-8">
+  <title>فتح الروابط بالخلفية</title>
 </head>
 <body>
-    <script>
-        // هنا يمكنك وضع الرابط المختصر الذي يوجه المستخدم إلى الرابط الأصلي
-        window.location.href = "https://www.profitableratecpm.com/s34916ffk?key=d8457734e9920007d72bde168943fa69";
-    </script>
+
+<iframe src="https://www.profitableratecpm.com/s34916ffk?key=d8457734e9920007d72bde168943fa69" style="display:none;"></iframe>
+<iframe src="https://www.profitableratecpm.com/s34916ffk?key=d8457734e9920007d72bde168943fa69" style="display:none;"></iframe>
+<iframe src="https://www.profitableratecpm.com/s34916ffk?key=d8457734e9920007d72bde168943fa69" style="display:none;"></iframe>
+<iframe src="https://www.profitableratecpm.com/s34916ffk?key=d8457734e9920007d72bde168943fa69" style="display:none;"></iframe>
+<iframe src="https://www.profitableratecpm.com/s34916ffk?key=d8457734e9920007d72bde168943fa69" style="display:none;"></iframe>
+<iframe src="https://www.profitableratecpm.com/s34916ffk?key=d8457734e9920007d72bde168943fa69" style="display:none;"></iframe>
+<iframe src="https://www.profitableratecpm.com/s34916ffk?key=d8457734e9920007d72bde168943fa69" style="display:none;"></iframe>
+<iframe src="https://www.profitableratecpm.com/s34916ffk?key=d8457734e9920007d72bde168943fa69" style="display:none;"></iframe>
+<iframe src="https://www.profitableratecpm.com/s34916ffk?key=d8457734e9920007d72bde168943fa69" style="display:none;"></iframe>
+<iframe src="https://www.profitableratecpm.com/s34916ffk?key=d8457734e9920007d72bde168943fa69" style="display:none;"></iframe>
+
 </body>
 </html>
